feat(Homework): 과제 조회 API 테스트 코드 추가